--- a/gb/23/10/17/n14096862.md
+++ b/gb/23/10/17/n14096862.md
@@ -29,35 +29,35 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/11/n11859969.md#1">涉多宗豪车被劫案 万锦19岁男子被控</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/8/n13425167.md#1">多伦多今年十大被盗车辆?本田CR-V居榜首</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/17/n13444383.md#1">30秒内车被盗 加拿大汽车盗窃案增多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617677.md#1">福特一把拦下小偷 还说要揍他屁股</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617102.md#1">汽车巨头将生产线搬去美国 福特：他们承诺不关厂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617081.md#1">62岁无家者市政广场被杀 警寻找死者亲属</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617062.md#1">斯特兰蒂斯吉普SUV电动车生产回流美国 加拿大失望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617054.md#1">投资损失引报复 绑架安省“加密币王”主嫌突认罪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617047.md#1">安省公立学院与校方达成协议 支援职员周四复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644645.md#1">临近年末10天狂砸15亿 联邦政府“冲花钱”再上演</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644643.md#1">浣熊越来越萌？专家：野生邻居不适合当宠物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643906.md#1">安省年轻人职涯大转向 转战技工与消防员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644615.md#1">前八年级教师向学生发送裸照 被判四年监禁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644613.md#1">安省与原住民社区签协议 建设通往“火环”区道路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643854.md#1">多伦多公车局员工在登打士地铁站遭刺伤</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/12/n11038882.md#1" target="_blank">严家伟：我亲历的《星星诗刊》大冤案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/19/n10071544.md#1" target="_blank">唐恩：从天安门自焚骗局看善恶有报</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/8/n14611777.md#1">为何“终其一生，不过苟且二字”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/27/n14603916.md#1">六十年积累功德 徐某登仙界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617076.md#1">【百年真相】小官巨贪 罗亚平权钱交易获极刑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617073.md#1">【新闻大家谈】Z世代抗争成功 马达加斯加变天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617159.md#1">【直播】川普总统在白宫举办晚宴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615717.md#1">汪林朋为何自杀？ 知情人：留置期间惨遭折磨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616083.md#1">中共四中全会前 又一名王岐山旧部落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615885.md#1">四中全会前内斗升级？ 胡锡进称言论管制过严</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615147.md#1">全昭旻回归《Running Man》 与成员默契互动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615714.md#1">港星蒋荣发曝与成龙反目内幕 公司纠纷引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616334.md#1">李亚鹏转战商圈积欠巨债 与海哈金喜官宣离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615651.md#1">王祖蓝一原因怕自己明年大限将至 活不过46岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616452.md#1">大陆女星白鹿自曝磕碎牙片 搞笑喊粉丝帮个忙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609546.md#1">拌酱让蔬菜更美味 大厨教你做“凉拌酱汁”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615224.md#1">为什么你应该在花园里撒上一些黑胡椒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615048.md#1">浴室里的这3样东西 千万别共用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615822.md#1">Z世代挑战坐着发呆 摆脱电子产品干扰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614493.md#1">拒绝的艺术：学会9个说“不”的方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/17/n14096862.htm">大多区警局和省警成立特别小组 联手打击劫车</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/17/n14096862.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
